# lemon-merringue-pie

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml
crates/bar/: Cargo.toml  build.rs  uniffi.toml
crates/bar/src/: bar.udl  lib.rs  models.rs
crates/chef/: Cargo.toml  build.rs  uniffi.toml
crates/chef/src/: chef.udl  lib.rs  models.rs
crates/common/: Cargo.toml  uniffi.toml
crates/common/src/: epoch.rs  error.rs  lib.rs  models.rs
crates/e/: Cargo.toml  build.rs  uniffi.toml
crates/e/src/: e.udl  lib.rs  models.rs
crates/f/: Cargo.toml  build.rs  uniffi.toml
crates/f/src/: f.udl  lib.rs  models.rs
crates/farm/: Cargo.toml  build.rs  uniffi.toml
crates/farm/src/: farm.udl  lib.rs  models.rs
crates/foo/: Cargo.toml  build.rs  uniffi.toml
crates/foo/src/: foo.udl  lib.rs  models.rs
crates/foobar/: Cargo.toml  build.rs  uniffi.toml
crates/foobar/src/: foobar.udl  lib.rs  models.rs
crates/foobar/tests/: binding_generation.rs
crates/foobar/tests/bindings/: example.swift
crates/kitchen/: Cargo.toml  build.rs  uniffi.toml
crates/kitchen/src/: kitchen.udl  lib.rs  models.rs
crates/lemon_filling/: Cargo.toml  build.rs  uniffi.toml
crates/lemon_filling/src/: lemon_filling.udl  lib.rs  models.rs
crates/lemon_meringue_pie/: Cargo.toml  build.rs  uniffi.toml
crates/lemon_meringue_pie/src/: lemon_meringue_pie.udl  lib.rs  models.rs
crates/lemon_meringue_pie/tests/: binding_generation.rs
crates/lemon_meringue_pie/tests/bindings/: pie_baking.kts  pie_baking.py  pie_baking.swift
crates/meringue/: Cargo.toml  build.rs  uniffi.toml
crates/meringue/src/: lib.rs  meringue.udl  models.rs
crates/money/: Cargo.toml  build.rs  uniffi.toml
crates/money/src/: lib.rs  models.rs  money.udl
crates/o/: Cargo.toml  build.rs  uniffi.toml
crates/o/src/: lib.rs  models.rs  o.udl
crates/pastry/: Cargo.toml  build.rs  uniffi.toml
crates/pastry/src/: lib.rs  models.rs  pastry.udl
