[workspace]
resolver = "2"
members = [
    "crates/chef",
    "crates/farm",
    "crates/kitchen",
    "crates/lemon_filling",
    "crates/lemon_meringue_pie",
    "crates/meringue",
    "crates/pastry",
]

[workspace.dependencies]
uniffi = { git = "https://github.com/bendk/uniffi-rs/", rev = "4b65c3796bc3743404e1ee2a7b4ab51e24589aa6" }
uuid = { version = "1.8.0", features = ["v4"] }
itertools = "0.13.0"
hex = "0.4.3"

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1
