[workspace]
resolver = "2"
members = [
    "crates/chef",
    "crates/farm",
    "crates/kitchen",
    "crates/lemon_filling",
    "crates/lemon_meringue_pie",
    "crates/meringue",
    "crates/pastry",
]

[workspace.dependencies]
derive_more = { git = "https://github.com/JelteF/derive_more", rev = "1196b2dd7a366c06db621093884adbc379fc0f0a", features = [
    "debug",
    "display",
    "from_str",
] }
uniffi = { git = "https://github.com/bendk/uniffi-rs/", rev = "f4fae828ac496e412fce70ab2f02f09ef19932c4" }
uuid = { version = "1.8.0", features = ["v4"] }
itertools = "0.13.0"
hex = "0.4.3"
thiserror = "1.0.61"

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1
