[package]
name = "common"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
itertools = "0.13.0"
hex = "0.4.3"
uniffi = { workspace = true, features = ["cli"] }
uuid = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
