[package]
name = "foobar"
version = "2.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
e = { path = "../e" }
f = { path = "../f" }
o = { path = "../o" }
foo = { path = "../foo" }
bar = { path = "../bar" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
