[package]
name = "lemon_meringue_pie"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
kitchen = { path = "../kitchen" }
chef = { path = "../chef" }
farm = { path = "../farm" }
money = { path = "../money" }
common = { path = "../common" }
meringue = { path = "../meringue" }
pastry = { path = "../pastry" }
lemon_filling = { path = "../lemon_filling" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
