[package]
name = "meringue"
version = "2.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
kitchen = { path = "../kitchen" }
farm = { path = "../farm" }
common = { path = "../common" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
