[package]
name = "pastry"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
kitchen = { path = "../kitchen" }
farm = { path = "../farm" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
